# IOT-aws-sdk

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  depth.avi  main.cpp  subscribe_publish_sample.c  test-openni-opencv  test.cpp
certs/: 4eb55a10a3-certificate.pem.crt  4eb55a10a3-private.pem.key  4eb55a10a3-public.pem.key
include/: CMakeCache.txt  CMakeLists.txt  Makefile  aws_iot_config.h  cmake_install.cmake
mbed/: CMakeLists.txt  Makefile  cmake_install.cmake
platform/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
platform/common/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
platform/mbedtls/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
platform/mbedtls/mbed/: CMakeCache.txt
platform/pthread/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
